--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
           <img src="img/avataaars.svg" alt="">
         </figure>
         <h1>START BOOTSTRAP</h1>
-        <p><i class="fas fa-star"></i></p>
+        <div class="stilelinea">
+          <ul>
+            <li class="lineabianca">&nbsp;</li>
+            <li><i class="fas fa-star"></i></li>
+            <li class="lineabianca">&nbsp;</li>
+          </ul>
+        </div>
         <p>Graphic Artist - Web Designer - Illustrator</p>
           </div>
         </div>
@@ -43,7 +49,13 @@
         <div class="row">
           <div class="bloccoimg col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <h2>Portfolio</h2>
-            <i class="linea fas fa-star"></i>
+            <div class="stilelinea">
+              <ul>
+                <li class="lineanera">&nbsp;</li>
+                <li><i class="fas fa-star iconanera"></i></li>
+                <li class="lineanera">&nbsp;</li>
+              </ul>
+            </div>
           </div>
           <div class="bloccoimg col-lg-12 col-md-12 col-sm-12 col-xs-12">
           <figure>
@@ -76,7 +88,13 @@
           <div class="blocco3 col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="div1blocco3 col-lg-12 col-md-12 col-sm-12 col-xs-12">
               <h2>About</h2>
-              <i class="fas fa-star"></i>
+              <div class="stilelinea">
+                <ul>
+                  <li class="lineabianca">&nbsp;</li>
+                  <li><i class="fas fa-star"></i></li>
+                  <li class="lineabianca">&nbsp;</li>
+                </ul>
+              </div>
             </div>
             <div class="div2blocco3 col-lg-6 col-md-6 col-sm-6 col-xs-12">
               <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
@@ -100,7 +118,13 @@
           <div class="blocco4 col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
               <h2>Contact Me</h2>
-              <i class="fas fa-star"></i>
+              <div class="stilelinea">
+                <ul>
+                  <li class="lineanera">&nbsp;</li>
+                  <li><i class="fas fa-star iconanera"></i></li>
+                  <li class="lineanera">&nbsp;</li>
+                </ul>
+              </div>
             </div>
         <form id="stileform" class="col-lg-offset-3 col-lg-6 col-md-offset-3 col-md-6 col-sm-offset-3 col-sm-6 col-xs-offset-3 col-xs-6">
           <div class="form-group">
@@ -155,6 +179,14 @@
           </div>
         </div>
       </footer>
+
+      <!-- <div class="stilelinea">
+        <ul>
+          <li class="lineabianca">a</li>
+          <li><i class="fas fa-star"></i></li>
+          <li class="lineabianca">a</li>
+        </ul>
+      </div> -->
 
 
 
